# django_react

./: .gitignore  README.md  db.sqlite3  makefile  package-lock.json  package.json  pyproject.toml  webpack.config.js
app/core/: exceptions.py  forms.py  formsmixins.py  middlewares.py  models.py  urls.py  views.py  viewsmixins.py
app/core/mixins/: forms.py  views.py
app/core/utils/: forms.py
app/templates/core/: _base.html  login.html
app/users/: forms.py  managers.py  models.py  urls.py  views.py
app/users/migrations/: 0001_initial.py
config/: settings.py  urls.py
frontend/static/bundles/: base-bundle.js  landing-bundle.js  login-bundle.js  main-bundle.js
frontend/static/components/inputs/: BaseInput.jsx
frontend/static/entrys/: login.js
frontend/templates/core/: _base.html  login.html
frontend/templates/users/: .gitkeep
static/bundles/: landing-bundle.js
static/entrys/: login.js
tests/users/: test_forms.py
